# SoftwareTesting

./: .gitignore  README.md
lab-1/: .clang-format  .clang-tidy  CMakeLists.txt  README.md
lab-1/include/domain/: arthur.hpp  camera_shot.hpp  hair.hpp  head.hpp  inference.hpp  movement_to_console.hpp  perception_event.hpp
lab-1/include/maths/: defaults.hpp  maths.hpp
lab-1/include/sorting/: sorting.hpp
lab-1/report/: report.tex
lab-1/src/: CMakeLists.txt
lab-1/src/maths/: maths.cpp
lab-1/src/sorting/: sorting.cpp
lab-1/test/: CMakeLists.txt  test_bubble_sorting.cpp  test_domain_model.cpp  test_maths.cpp  test_sec.cpp
lab-2/: .clang-format  CMakeLists.txt  README.md
lab-2/app/: CMakeLists.txt  main.cpp
lab-2/csv/: complex.csv  cos.csv  ln.csv  log_3.csv  log_5.csv  sin.csv  tan.csv
lab-2/include/maths/: complex.hpp  cos.hpp  defaults.hpp  ln.hpp  log.hpp  sin.hpp  tan.hpp
lab-2/report/: .gitignore  report.tex
lab-2/scripts/: generate_csv.py  generate_plots.py
lab-2/test/: CMakeLists.txt  csv_stub_table.hpp  test_complex.cpp  test_cos.cpp  test_ln.cpp  test_log.cpp  test_sin.cpp  test_tan.cpp
lab-2/test/data/top_down/: cos_for_tan_stub.csv  ln_for_complex_stub.csv  ln_for_log_stub.csv  log3_for_complex_stub.csv  log5_for_complex_stub.csv  sin_for_cos_stub.csv  sin_for_tan_stub.csv  tan_for_complex_stub.csv
lab-3/: README.md
lab-3/report/: report.aux  report.tex
lab-3/tests/: statcounter.side
lab-3/tests/selenium-rc/: StatcounterChromeRcTest.java
lab-4/: README.md
lab-4/data/: load_results.csv  stress_results.csv
lab-4/report/: report.aux  report.tex
lab-4/scripts/: generate_plots.py
lab-4/tests/: load-test.jmx  stress-test.jmx
